--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
-spring.datasource.url = jdbc:mysql://localhost:3306/cloud
+spring.datasource.url = jdbc:mysql://localhost:3306/cloud123
 spring.datasource.username = root
 spring.datasource.password = root
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
